# game-of-life-vhdl

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  configure.sh  pyproject.toml  tests.py
backend/api/: VHDLBackend.py  main.py
backend/entities/: cell.vhdl  ones_counter.vhdl  world.vhdl  world_tb_interactive.vhdl
backend/testbenches/: cell_tb.vhdl  ones_counter_tb.vhdl  world_tb.vhdl
frontend/: Dockerfile  backend-openapi-spec.json  package.json  svelte.config.js
frontend/src/components/: cell.svelte  controls.svelte  world.svelte
frontend/src/routes/: index.svelte
