[tool.poetry]
name = "backend"
version = "0.1.0"
description = "VHDL and Python backend for Game of Life."
authors = ["Riccardo Persello <riccardo.persello+i@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.72.0"}
ptyprocess = "^0.7.0"

[tool.poetry.dev-dependencies]
vunit-hdl = "^4.6.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
